--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ addons_shortcuts:
           key_url: https://apt.llvm.org/llvm-snapshot.gpg.key
         - ubuntu-toolchain-r-test
       packages: ['clang-7','postgresql-9.6-postgis-2.3',
-                 'python3-psycopg2', 'libexpat1-dev', 'libpq-dev', 'libbz2-dev', 'libproj-dev',
+                 'python3-pip', 'python3-psycopg2', 'libexpat1-dev', 'libpq-dev', 'libbz2-dev', 'libproj-dev',
                  'lua5.2', 'liblua5.2-dev', 'libluajit-5.1-dev',
                  'libboost1.55-dev', 'libboost-system1.55-dev', 'libboost-filesystem1.55-dev']
 
@@ -138,6 +138,7 @@ before_script:
   - psql -U postgres -c "SELECT PostGIS_Full_Version()"
   - $CXX --version
   - proj | head -n1
+  - if [[ $TRAVIS_DIST = 'trusty' ]]; then pyenv shell 3.6; pip install psycopg2; fi
 
 script:
   - mkdir build && cd build
