Appveyor: switch to alternative bzip2 1.0.8.0 build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 environment:
   global:
-    BZIP2_VER: 1.0.6
+    BZIP2_VER: 1.0.8.0
     EXPAT_VER: 2.2.5
     PROJ4_VER: 4.9.3
     ZLIB_VER: 1.2.11
@@ -11,6 +11,8 @@ environment:
     WINGETOPT_VER: v0.95
     GETOPT_INCLUDE_DIR: C:\wingetopt\src
     GETOPT_LIBRARY: C:\wingetopt\build\wingetopt.lib
+    BZIP2_INCLUDE_DIR: C:\bzip2\dev
+    BZIP2_LIBRARY: C:\bzip2\dll
     BOOST_PATH: C:\Libraries\boost_1_63_0
     POSTGRESQL_VER: 9.6.6
     TESTS_POSTGRESQL_ROOT: C:\Progra~1\PostgreSQL\9.6
@@ -33,6 +35,8 @@ clone_depth: 1
 
 init:
   - git config --global core.autocrlf input
+  - set bz2_dll_url=https://github.com/philr/bzip2-windows/releases/download/v%BZIP2_VER%/bzip2-dll-%BZIP2_VER%-win-%arch%.zip
+  - set bz2_dev_url=https://github.com/philr/bzip2-windows/releases/download/v%BZIP2_VER%/bzip2-dev-%BZIP2_VER%-win-%arch%.zip
   - if "%arch%"=="x86" (
       set vcvarsall_arg=x86&&
       set conda_path=C:\Miniconda36\Scripts&&
@@ -53,7 +57,11 @@ install:
   - conda config --set always_yes yes
   - conda create --name osm2pgsql
   - activate osm2pgsql
-  - conda install bzip2=%BZIP2_VER% expat=%EXPAT_VER% proj4=%PROJ4_VER% zlib=%ZLIB_VER% postgresql=%POSTGRESQL_VER%
+  - conda install expat=%EXPAT_VER% proj4=%PROJ4_VER% zlib=%ZLIB_VER% postgresql=%POSTGRESQL_VER%
+  - ps: if (!(Test-Path "C:\bzip2_dll_$env:arch.zip")){(new-object net.webclient).DownloadFile($env:bz2_dll_url, "C:\bzip2_dll_$env:arch.zip")}
+  - 7z x -y C:\bzip2_dll_%arch%.zip -o%BZIP2_LIBRARY%
+  - ps: if (!(Test-Path "C:\bzip2_dev_$env:arch.zip")){(new-object net.webclient).DownloadFile($env:bz2_dev_url, "C:\bzip2_dev_$env:arch.zip")}
+  - 7z x -y C:\bzip2_dev_%arch%.zip -o%BZIP2_INCLUDE_DIR%
   - ps: if (!(Test-Path "C:\lua_$env:arch.zip")){(new-object net.webclient).DownloadFile($env:lua_url, "C:\lua_$env:arch.zip")}
   - 7z x -y C:\lua_%arch%.zip -oC:\lua
   - ps: if (!(Test-Path "C:\postgis.zip")){(new-object net.webclient).DownloadFile($env:POSTGIS_URL, "C:\postgis.zip")}
@@ -78,6 +86,8 @@ build_script:
     -DLUA_INCLUDE_DIR=%LUA_INCLUDE_DIR% -DLUA_LIBRARIES=%LUA_LIBRARIES% 
     -DGETOPT_INCLUDE_DIR=%GETOPT_INCLUDE_DIR% -DGETOPT_LIBRARY=%GETOPT_LIBRARY%
     -DBOOST_ROOT=%BOOST_PATH% -DBoost_USE_STATIC_LIBS=ON
+    -DBZIP2_INCLUDE_DIR=%BZIP2_INCLUDE_DIR%
+    -DBZIP2_LIBRARIES=%BZIP2_INCLUDE_DIR%\libbz2.lib
   - nmake
 
 after_build:
@@ -90,7 +100,7 @@ after_build:
   - copy /y %conda_library_path%\bin\ssleay32.dll osm2pgsql-bin
   - copy /y %conda_library_path%\bin\zlib.dll osm2pgsql-bin
   - copy /y %conda_library_path%\bin\expat.dll osm2pgsql-bin
-  - copy /y %conda_library_path%\bin\libbz2.dll osm2pgsql-bin
+  - copy /y %BZIP2_LIBRARY%\libbz2.dll osm2pgsql-bin
   - copy /y %LUA_DLL% osm2pgsql-bin
   - 7z a c:\osm2pgsql\osm2pgsql_%build_type%_%arch%.zip osm2pgsql-bin -tzip
 
@@ -114,4 +124,6 @@ artifacts:
 
 cache:
   - C:\lua_%arch%.zip -> appveyor.yml
+  - C:\bzip2_dev_%arch%.zip -> appveyor.yml
+  - C:\bzip2_dll_%arch%.zip -> appveyor.yml
   - C:\postgis.zip -> appveyor.yml
