Travis OSX: Workaround for uninstalled headers

--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,7 @@ matrix:
            BUILD_TYPE="Debug" LUAJIT_OPTION="OFF" TEST_NODB=1
            CXXFLAGS="-pedantic -Wextra -Werror" CPPVERSION=11
       before_install:
+        - sudo installer -pkg /Library/Developer/CommandLineTools/Packages/macOS_SDK_headers_for_macOS_10.14.pkg -target /
         - brew install lua; brew install lua
       before_script:
         - proj | head -n1
@@ -107,6 +108,7 @@ matrix:
            BUILD_TYPE="Debug" LUAJIT_OPTION="OFF" TEST_NODB=1
            CXXFLAGS="-pedantic -Wextra -Werror" CPPVERSION=11
       before_install:
+        - sudo installer -pkg /Library/Developer/CommandLineTools/Packages/macOS_SDK_headers_for_macOS_10.14.pkg -target /
         - brew install lua; brew install lua
       before_script:
         - proj | head -n1
@@ -119,6 +121,7 @@ matrix:
            BUILD_TYPE="Debug" LUAJIT_OPTION="OFF" TEST_NODB=1
            CXXFLAGS="-pedantic -Wextra -Werror" CPPVERSION=11
       before_install:
+        - sudo installer -pkg /Library/Developer/CommandLineTools/Packages/macOS_SDK_headers_for_macOS_10.14.pkg -target /
         - brew install lua; brew install lua
       before_script:
         - proj | head -n1
