--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,6 +45,13 @@ set_test(test-middle)
 set_test(test-options-database LABELS NoDB)
 set_test(test-options-parse LABELS NoDB)
 set_test(test-options-projection)
+set_test(test-output-flex)
+set_test(test-output-flex-area)
+set_test(test-output-flex-attr)
+set_test(test-output-flex-extra)
+set_test(test-output-flex-tablespace LABELS Tablespace)
+set_test(test-output-flex-update)
+set_test(test-output-flex-validgeom)
 set_test(test-output-gazetteer)
 set_test(test-output-multi-line)
 set_test(test-output-multi-point)
