--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -69,6 +69,14 @@ if (HAVE_LUA)
     set_test(test-output-multi-line-storage)
     set_test(test-output-multi-poly-trivial)
     set_test(test-output-multi-tags)
+    set_test(test-output-flex)
+    set_test(test-output-flex-area)
+    set_test(test-output-flex-attr)
+    set_test(test-output-flex-extra)
+    set_test(test-output-flex-uni)
+    set_test(test-output-flex-tablespace LABELS Tablespace)
+    set_test(test-output-flex-update)
+    set_test(test-output-flex-validgeom)
 endif()
 
 
