--- a/appveyor.yml
+++ b/appveyor.yml
@@ -76,7 +76,7 @@ install:
   - ps: Expand-Archive luarocks.zip
   - ps: Copy-Item -Recurse luarocks\luarocks-3.2.1-win32\win32\lua5.1 C:\lua
   - cmd: cd luarocks\luarocks-3.2.1-win32
-  - cmd: install.bat /Q
+  - cmd: install.bat /Q /L
   - cmd: set PATH=%PATH%;C:\Program Files (x86)\LuaRocks;C:\lua\bin
   - cmd: cd ..\..
   - ps: Remove-Item luarocks -Recurse -Force
