--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,7 +74,8 @@ install:
   - python -m pip install psycopg2
   - ps: Invoke-Webrequest 'http://luarocks.github.io/luarocks/releases/luarocks-3.2.1-windows-32.zip' -OutFile luarocks.zip
   - ps: Expand-Archive luarocks.zip
-  - luarocks-3.2.1-windows-32\luarocks.exe install --local lua-messagepack
+  - set PATH=%PATH%;luarocks-3.2.1-windows-32
+  - luarocks.exe install --local lua-messagepack
 
 before_build:
   - cd C:\wingetopt
