--- a/appveyor.yml
+++ b/appveyor.yml
@@ -72,9 +72,10 @@ install:
   - git clone https://github.com/alex85k/wingetopt -b %WINGETOPT_VER% C:\wingetopt
   - python -V
   - python -m pip install psycopg2
-  - ps: Invoke-Webrequest 'http://luarocks.github.io/luarocks/releases/luarocks-3.2.1-windows-32.zip' -OutFile luarocks.zip
+  - ps: Invoke-Webrequest 'https://luarocks.github.io/luarocks/releases/luarocks-3.2.1-windows-32.zip' -OutFile luarocks.zip
   - ps: Expand-Archive luarocks.zip
-  - set PATH=%PATH%;luarocks-3.2.1-windows-32
+  - dir c:\luarocks-3.2.1-windows-32
+  - set PATH=%PATH%;c:\luarocks-3.2.1-windows-32
   - luarocks.exe install --local lua-messagepack
 
 before_build:
