--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,8 +75,8 @@ install:
   - ps: Invoke-Webrequest 'https://luarocks.github.io/luarocks/releases/luarocks-3.2.1-windows-32.zip' -OutFile luarocks.zip
   - ps: Expand-Archive luarocks.zip
   - dir c:\
-  - dir c:\luarocks-3.2.1-windows-32
-  - set PATH=%PATH%;c:\luarocks-3.2.1-windows-32
+  - dir c:\luarocks
+  - set PATH=%PATH%;c:\luarocks
   - luarocks.exe install --local lua-messagepack
 
 before_build:
